feat : #32 - 서비스 추가 , 삭제 뷰 구현 (서비스 검색페이지 , 서비스 정보 페이지)

--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -9,11 +9,16 @@
         <title>ServiceHub</title>
 
         <!-- Meta -->
+
         <meta charset="utf-8">
         <meta property="og:title" content="SERViCE HUB" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="http://impatient.iptime.org:8080" />
         <meta property="og:image" content="http://impatient.iptime.org:8080/logo/impati.jpeg" />
+
+        <meta th:name="_csrf" th:content="${_csrf.token}"/>
+        <meta th:name="_csrf_header" th:content="${_csrf.headerName}"/>
+
 
         <link rel="shortcut icon" href="favicon.ico">
         <!-- Google Fonts -->
