--- a/src/main/resources/templates/service/search.html
+++ b/src/main/resources/templates/service/search.html
@@ -13,9 +13,7 @@
 
 <body>
 
-<div th:insert="~{fragment/sidebar :: sidebar}"></div>
-
-<div class="main-wrapper">
+<div class="container">
 
   <div th:insert="~{fragment/toolbar :: toolbar}"></div>
 
