--- a/src/main/resources/templates/fragment/library.html
+++ b/src/main/resources/templates/fragment/library.html
@@ -24,6 +24,7 @@
     </div><!--//configure-panel-->
 
     <!-- Javascript -->
+    <script src="/js/jquery.min.js"></script>
     <script src="/assets/plugins/popper.min.js"></script>
     <script src="/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 
