--- a/src/main/resources/templates/service/service-edit-page.html
+++ b/src/main/resources/templates/service/service-edit-page.html
@@ -7,9 +7,8 @@
 
 <body>
 
-<div th:insert="~{fragment/sidebar :: sidebar}"></div>
 
-<div class="main-wrapper">
+<div class="container">
 
   <div th:insert="~{fragment/toolbar :: toolbar}"></div>
 
@@ -19,8 +18,9 @@
       <a class="btn btn-primary" th:href="${singleServiceWithCommentsDto.serviceUrl}" target="_blank"><i class="fas fa-plane-departure me-2"></i>Service로 이동하기</a>
     </div><!--//container-->
   </section>
-  <div class="container resume-container px-3 px-lg-5">
-    <article class="resume-wrapper mx-auto theme-bg-light p-5 mb-5 my-5 shadow-lg">
+
+  <div class="container resume-container">
+    <article class="resume-wrapper mx-auto theme-bg-light  shadow-lg">
 
       <div class="resume-header">
         <div class="row align-items-center">
