--- a/src/main/resources/templates/service/service-page.html
+++ b/src/main/resources/templates/service/service-page.html
@@ -8,9 +8,8 @@
 
 <body>
 
-<div th:insert="~{fragment/sidebar :: sidebar}"></div>
 
-<div class="main-wrapper">
+<div class="container">
 
     <div th:insert="~{fragment/toolbar :: toolbar}"></div>
 
