--- a/src/main/resources/templates/service/registration.html
+++ b/src/main/resources/templates/service/registration.html
@@ -31,7 +31,7 @@
 
             <form id="search" th:action method="get">
                 <div class="input-group mb-auto">
-                    <input type="url" class="form-control bg-light border-0 small" id="servicesUrl"  name="servicesUrl" placeholder="URL" aria-label="URL" aria-describedby="button-addon2">
+                    <input type="url" class="form-control bg-light border-0 small" id="servicesUrl"  name="serviceUrl" placeholder="URL" aria-label="URL" aria-describedby="button-addon2">
                     <button class="btn btn-outline-secondary" type="submit" id="button-addon2">검색</button>
                 </div>
             </form>
