fix : 서비스 페이지에서 타이틀이 안보이던 문제 해결

--- a/src/main/resources/templates/service/service-page.html
+++ b/src/main/resources/templates/service/service-page.html
@@ -53,7 +53,7 @@
                     </div>
 
                     <div class="col text-start">
-                        <p class="mb-0" th:text="${singleServiceWithCommentsDto.serviceName}">Service Title </p>
+                        <p class="mb-0" th:text="${singleServiceWithCommentsDto.title}">Service Title </p>
                     </div><!--//col-->
                 </div>
             </div><!--//resume-intro-->
