--- a/src/main/resources/templates/client/signin.html
+++ b/src/main/resources/templates/client/signin.html
@@ -54,12 +54,16 @@
                                     </button>
                                 </form>
                                     <hr>
-                                    <a href="index.html" class="btn btn-google btn-user btn-block">
+                                    <a th:href="@{/oauth2/authorization/google}" class="btn btn-google btn-user btn-block">
                                         <i class="fab fa-google fa-fw"></i> Login with Google
                                     </a>
-                                    <a href="index.html" class="btn btn-facebook btn-user btn-block">
-                                        <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
+                                    <a th:href="@{/oauth2/authorization/naver}" class="btn btn-naver btn-user btn-block">
+                                        <i class="fab fa-google fa-fw"></i> Login with naver
                                     </a>
+                                    <a th:href="@{/oauth2/authorization/kakao}" class="btn btn-kakao btn-user btn-block">
+                                        <i class="fab fa-google fa-fw"></i> Login with kakao
+                                    </a>
+
                                 <hr>
                                 <div class="text-center">
                                     <a class="small" href="forgot-password.html">Forgot Password?</a>
