--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -11,16 +11,16 @@
         <!-- Meta -->
 
         <meta charset="utf-8">
-        <meta property="og:title" content="SERViCE HUB" />
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="http://impatient.iptime.org:8080" />
-        <meta property="og:image" content="http://impatient.iptime.org:8080/logo/impati.jpeg" />
+        <meta property="og:title" content=" SERViCE HUB" />
+        <meta property="og:type" content=" website" />
+        <meta property="og:url" content="http://impatient.iptime.org:9090" />
+        <meta property="og:image" content="http://impatient.iptime.org:9090/logo/service-hub.png" />
 
         <meta th:name="_csrf" th:content="${_csrf.token}"/>
         <meta th:name="_csrf_header" th:content="${_csrf.headerName}"/>
 
 
-        <link rel="shortcut icon" href="favicon.ico">
+        <link rel="shortcut icon" href="service-hub.png">
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 
