--- a/src/main/resources/templates/client/signup.html
+++ b/src/main/resources/templates/client/signup.html
@@ -30,7 +30,7 @@
                     <div class="text-center">
                         <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
                     </div>
-                    <form class="user" th:action="@{/signup}" method="post">
+                    <form class="user" th:action="@{/keycloak/signup}" method="post">
                         <div class="form-group row">
                             <div class="col-sm-12 mb-3 mb-sm-0">
                                 <input type="text" class="form-control form-control-user" name="username" id="exampleFirstName"
