--- a/src/main/resources/templates/service/service-page.html
+++ b/src/main/resources/templates/service/service-page.html
@@ -95,10 +95,10 @@
                             <img src="assets/images/clients/profile-4.png" alt="image"/> //TODO : 사용자 프로필 기능이 추가되면
                         </div> -->
                         <div class="meta" style="text-align: right">
-                            <div class="name"th:text="${comment.createBy}">James Lee</div>
+                            <div class="name"th:text="${comment.nickname}">James Lee</div>
                             <div class="info"th:text="${comment.createAt}">James Lee</div>
-                            <span><a class="text-link" th:if="${#authentication.name == comment.createBy}" th:href="@{/comments/edit (serviceId = ${singleServiceWithCommentsDto.serviceId},commentId=${comment.commentId})}">수정</a></span>
-                            <span><a class="text-link" th:if="${#authentication.name == comment.createBy}" th:href="@{/comments/delete (serviceId = ${singleServiceWithCommentsDto.serviceId},commentId=${comment.commentId})}">삭제</a></span>
+                            <span><a class="text-link" th:if="${#authentication.name == comment.nickname}" th:href="@{/comments/edit (serviceId = ${singleServiceWithCommentsDto.serviceId},commentId=${comment.commentId})}">수정</a></span>
+                            <span><a class="text-link" th:if="${#authentication.name == comment.nickname}" th:href="@{/comments/delete (serviceId = ${singleServiceWithCommentsDto.serviceId},commentId=${comment.commentId})}">삭제</a></span>
                         </div>
                     </div>
                     <br>
