--- a/src/main/resources/templates/fragment/sidebar.html
+++ b/src/main/resources/templates/fragment/sidebar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <body>
 <header class="header text-center" th:fragment="sidebar">
     <div class="force-overflow">
@@ -27,7 +27,7 @@
                         <a class="nav-link" th:href="@{/service/search}"><i class="fas fa-laptop-code fa-fw me-2"></i>서비스 검색</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/service/registration}"><i class="fas fa-briefcase fa-fw me-2"></i>서비스 등록</a>
+                        <a class="nav-link" sec:authorize="hasRole('ADMIN')" th:href="@{/service/registration}"><i class="fas fa-briefcase fa-fw me-2"></i>서비스 등록</a>
                     </li>
                 </ul>
 
