--- a/src/main/resources/templates/client/client-page.html
+++ b/src/main/resources/templates/client/client-page.html
@@ -13,19 +13,20 @@
     <div th:insert="~{fragment/toolbar :: toolbar}"></div>
 
     <section class="cta-section theme-bg-light py-5">
-        <div class="container text-center single-col-max-width">
-            <h2 class="heading">나의 서비스 목록</h2>
+        <div class="container single-col-max-width">
+            <h2 class="heading text-center" th:text="|${#authentication.getName()} 님의 서비스 목록|">나의 서비스 목록</h2>
             <div class="intro"></div>
-            <div class="single-form-max-width pt-3 mx-auto">
+            <div class="single-form-max-width text-center pt-3 mx-auto">
                 <form  th:action  method="get">
                     <div class="form-floating  mb-3 col-12">
-                        <input type="text" class="form-control" id="serviceName" name="serviceName" placeholder="serviceName">
-                        <label for="serviceName"> &nbsp &nbsp serviceName</label>
+                        <input type="text" class="form-control" id="serviceName" name="serviceName" placeholder="서비스 이름으로 검색">
+                        <label for="serviceName"> &nbsp &nbsp 서비스 이름으로 검색</label>
                         <label for="serviceName"></label>
                     </div>
                     <hr>
                     <button type="submit" class="btn btn-primary">검색</button>
                 </form>
+                <div class="text-end"><button class="btn btn-primary" th:onclick="|location.href='@{/client}'|">전체 검색</button></div>
             </div><!--//single-form-max-width-->
         </div><!--//container-->
     </section>
