--- a/src/main/resources/templates/service/search.html
+++ b/src/main/resources/templates/service/search.html
@@ -42,7 +42,7 @@
           </div>
           <hr>
           <button type="submit" class="btn btn-primary">검색</button>
-          <div class="text-end"><button class="btn btn-primary" th:onclick="|location.href='@{/search}'|">인기순 검색</button></div>
+          <div class="text-end"><button class="btn btn-primary" th:onclick="|location.href='@{/search}'|">전체 검색</button></div>
         </form>
       </div><!--//single-form-max-width-->
     </div><!--//container-->
@@ -58,7 +58,7 @@
 
           <div class="col-md-2">
             <a class="card-link"  th:href="${service.serviceUrl}">
-              <img class="img-fluid rounded-start" width="50%" th:src='@{http://impatient.iptime.org:9090/logo/{store} (store=${service.logoStoreName})}' alt="image">
+              <img class="img-fluid rounded-start" width="50%" height="100%" th:src='@{/logo/{store} (store=${service.logoStoreName})}' alt="image">
             </a>
           </div>
 
@@ -80,8 +80,8 @@
       </div><!--//item-->
 
       <nav class="blog-nav nav nav-justified my-5">
-        <a class="nav-link-prev nav-item nav-link d-none rounded-left" href="#">Previous<i class="arrow-prev fas fa-long-arrow-alt-left"></i></a>
-        <a class="nav-link-next nav-item nav-link rounded" href="#">Next<i class="arrow-next fas fa-long-arrow-alt-right"></i></a>
+        <a class="nav-link-prev nav-item nav-link rounded-left" th:unless="${currentPage == firstPage}" th:href="@{search (page=${currentPage}-1)}">Previous<i class="arrow-prev fas fa-long-arrow-alt-left"></i></a>
+        <a class="nav-link-next nav-item nav-link rounded-right" th:unless="${currentPage == endPage}" th:href="@{search (page=${currentPage}+1)}">Next<i class="arrow-next fas fa-long-arrow-alt-right"></i></a>
       </nav>
 
     </div>
@@ -110,7 +110,7 @@
       cache :false, // 캐시 여부
       success: function(data){
         console.log(data.name);
-        window.location="http://impatient.iptime.org:9090/service/search";
+        window.location=location.href;
       },
       error:function(xhr,status,error){
         console.log('error:'+error);
@@ -134,7 +134,7 @@
       cache :false, // 캐시 여부
       success: function(data){
         console.log(data.name);
-        window.location="http://impatient.iptime.org:9090/service/search";
+        window.location=location.href;
       },
       error:function(xhr,status,error){
         console.log('error:'+error);
