refactor : 소셜 로그인 버튼 수정

--- a/src/main/resources/templates/client/signin.html
+++ b/src/main/resources/templates/client/signin.html
@@ -54,16 +54,17 @@
                                     </button>
                                 </form>
                                 <hr>
-                                    <button th:onclick="|location.href='@{/oauth2/authorization/naver}'|"class="btn img btn-block">
-                                        <img src="naver2.png">
-                                    </button>
-                                    <button th:onclick="|location.href='@{/oauth2/authorization/google}'|"class="btn img btn-block">
-                                         <img src="google4.png">
-                                    </button>
-                                    <button th:onclick="|location.href='@{/oauth2/authorization/kakao}'|"class="btn img btn-block">
-                                         <img src="kakao_login_medium_wide.png">
-                                    </button>
-
+                                    <div class="text-center">
+                                        <button style="height: 69px" th:onclick="|location.href='@{/oauth2/authorization/naver}'|"class="btn">
+                                            <img src="naver3.png" width="45px">
+                                        </button>
+                                        <button style="height: 69px" th:onclick="|location.href='@{/oauth2/authorization/google}'|"class="btn">
+                                             <img src="google5.png" width="45px">
+                                        </button>
+                                        <button style="height: 69px" th:onclick="|location.href='@{/oauth2/authorization/kakao}'|"class="btn">
+                                             <img src="kakao_login_medium.png">
+                                        </button>
+                                    </div>
                                 <hr>
                                 <div class="text-center">
                                     <a class="small" href="forgot-password.html">Forgot Password?</a>
