--- a/src/main/resources/templates/client/signup.html
+++ b/src/main/resources/templates/client/signup.html
@@ -17,6 +17,13 @@
 
 </head>
 
+<style>
+    .field-error {
+        border-color: #dc3545;
+        color: #dc3545;
+    }
+</style>
+
 <body class="">
 
 <div class="container"  style="width: 60%;display: flex;flex-direction: column;align-items: center;justify-content: center">
@@ -30,26 +37,32 @@
                     <div class="text-center">
                         <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
                     </div>
-                    <form class="user" th:action="@{/keycloak/signup}" method="post">
+                    <form class="user" th:action="@{/signup}" th:object="${signupForm}" method="post">
                         <div class="form-group row">
                             <div class="col-sm-12 mb-3 mb-sm-0">
-                                <input type="text" class="form-control form-control-user" name="username" id="exampleFirstName"
+                                <input type="text" class="form-control form-control-user" th:field="*{username}" name="username" id="exampleFirstName"
                                        placeholder="First Name">
+                                <small class="field-error" th:errors="*{username}"></small>
                             </div>
                         </div>
                         <div class="form-group">
-                            <input type="email" class="form-control form-control-user" name="email" id="exampleInputEmail"
+                            <input type="email" class="form-control form-control-user" name="email" th:field="*{email}" id="exampleInputEmail"
                                    placeholder="Email Address">
+                            <small class="field-error" th:errors="*{email}"></small>
                         </div>
                         <div class="form-group row">
                             <div class="col-sm-6 mb-3 mb-sm-0">
                                 <input type="password" class="form-control form-control-user"
-                                       id="exampleInputPassword" name="password" placeholder="Password">
+                                       id="exampleInputPassword" name="password" th:field="*{password}" placeholder="Password">
+
+                                <small class="field-error" th:errors="*{password}"></small>
                             </div>
                             <div class="col-sm-6">
                                 <input type="password" class="form-control form-control-user"
-                                       id="exampleRepeatPassword" name="repeatPassword" placeholder="Repeat Password">
+                                       id="exampleRepeatPassword" name="repeatPassword" th:field="*{repeatPassword}" placeholder="Repeat Password">
+                                <small class="field-error" th:errors="*{repeatPassword}"></small>
                             </div>
+                            <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>비밀번호는 8자 이상이어야 하며, 숫자/대문자/소문자/특수문자를 모두 포함해야 합니다.</small>
                         </div>
                         <button type="submit" class="btn btn-primary btn-user btn-block">
                             Register Account
